--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 AIPROXY_TOKEN="eyJhbGciOiJIUzI1NiJ9.eyJlbWFpbCI6IjIyZjMwMDEzOThAZHMuc3R1ZHkuaWl0bS5hYy5pbiJ9.hUiIS6HvQ-gN5BXkyETUcxinOW7K0Xj7xd84MdI8dNM"
+email=22f3001398@ds.study.iitm.ac.in
